Changed App.css to stop cutting off course title

--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,6 @@
   }
 }
 
-table.semester tr {
-  flex-wrap: wrap;
-  word-wrap: break-word;
+td {
+  word-break: break-word;
 }
